[package]
name = "clickler"
version = "0.1.0"
edition = "2024"

[dependencies]
fred = "10.1.0"
actix-web = "4"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
pretty_env_logger = "0.4"
async-trait = "0.1.89"
[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v7",
]
derive_more = "=2.0.1"
async-trait = "0.1.89"

